从配置文件读取db-type、db-path、document-estimate-num

--- a/init.conf
+++ b/init.conf
@@ -2,25 +2,28 @@
 mode = 1
 
 # server启动时是否需要重建索引
-rebuild_index = false
+rebuild-index = false
 
 # server的工作端口
-port = 8080 
+port = 8080
 
 # 正排索引数据的存放路径
-db_path = ""
+db-path = "data/localdb"
 
 # 分布式环境中一共有几台index worker
-total_workers = 0
+total-workers = 0
 
 # 本机是第几台index worker(从0开始编号)
-worker_index = 0
+worker-index = 0
 
-# 正排索引使用哪种KV数据库
-dbtype = bolt
+# 正排索引使用哪种KV数据库（暂且仅支持bolt和badger）
+db-type = bolt
+
+# 预估的数据量，用于分配内存
+# document-estimate-num = 50000
 
 # 原始的数据文件，由它来创建索引
-csv_file = 
+csv-file =
 
-# etcd集群的地址
+# 集群的地址
 servers = ["127.0.0.1:2379", "127.0.0.1:2380", "127.0.0.1:2381"]
