修改错误变量命名，初始化演示demo

--- a/init.conf
+++ b/init.conf
@@ -5,7 +5,19 @@ mode = 1
 rebuild-index = false
 
 # server的工作端口
-port = 8080
+port = 8888
+
+# 分布式环境中一共有几台index worker
+total-workers = 1
+
+# 本机是第几台index worker(从0开始编号)
+worker-index = 0
+
+# 分布式服务中，当前节点（worker）所在的group名称
+index-service = "index_service1"
+
+# server启动时是否需要重建索引
+rebuild-index = false
 
 # 正排索引数据的存放路径
 db-path = "data/localdb"
@@ -16,14 +28,14 @@ total-workers = 0
 # 本机是第几台index worker(从0开始编号)
 worker-index = 0
 
-# 正排索引使用哪种KV数据库（暂且仅支持bolt和badger）
-db-type = bolt
-
 # 预估的数据量，用于分配内存
 # document-estimate-num = 50000
 
-# 原始的数据文件，由它来创建索引
-csv-file =
+# 正排索引使用哪种KV数据库（暂且仅支持bolt和badger）
+db-type = badger
 
-# 集群的地址
+# 原始的数据文件路径，由它来创建索引(基于项目根路径)
+csv-file = "data/bilibili_video.csv"
+
+# etcd集群的endpoints
 servers = ["127.0.0.1:2379", "127.0.0.1:2380", "127.0.0.1:2381"]
