demo增加索引导入，初步实现webserver

--- a/init.conf
+++ b/init.conf
@@ -4,9 +4,6 @@ mode = 1
 # server启动时是否需要重建索引
 rebuild-index = false
 
-# server的工作端口
-port = 8888
-
 # 分布式环境中一共有几台index worker
 total-workers = 1
 
@@ -19,6 +16,9 @@ index-service = "index_service1"
 # server启动时是否需要重建索引
 rebuild-index = false
 
+# 正排索引使用哪种KV数据库（暂且仅支持bolt和badger）
+db-type = badger
+
 # 正排索引数据的存放路径
 db-path = "data/localdb"
 
@@ -29,10 +29,7 @@ total-workers = 0
 worker-index = 0
 
 # 预估的数据量，用于分配内存
-# document-estimate-num = 50000
-
-# 正排索引使用哪种KV数据库（暂且仅支持bolt和badger）
-db-type = badger
+document-estimate-num = 50000
 
 # 原始的数据文件路径，由它来创建索引(基于项目根路径)
 csv-file = "data/bilibili_video.csv"
