--- a/init.conf
+++ b/init.conf
@@ -14,13 +14,13 @@ worker-index = 0
 index-service = "index_service1"
 
 # server启动时是否需要重建索引
-rebuild-index = false
+rebuild-index = true
 
 # 正排索引使用哪种KV数据库（暂且仅支持bolt和badger）
 db-type = badger
 
 # 正排索引数据的存放路径
-db-path = "data/localdb"
+db-path = "data/"
 
 # 分布式环境中一共有几台index worker
 total-workers = 0
