--- a/init.conf
+++ b/init.conf
@@ -1,17 +1,23 @@
 # 启动哪类服务。1-standalone web server, 2-grpc index server, 3-distributed web server
-mode = 1
+mode = 2
 
 # server启动时是否需要重建索引
 rebuild-index = false
 
+# 服务的端口
+port = 7887
+
 # 分布式环境中一共有几台index worker
-total-workers = 1
+total-workers = 2
 
 # 本机是第几台index worker(从0开始编号)
 worker-index = 0
 
 # 分布式服务中，当前节点（worker）所在的group名称
 index-service = "index_service1"
+
+# 分布式服务中，每个节点上报的状态信息间隔时间(单位：秒)
+heart-rate = 3
 
 # server启动时是否需要重建索引
 rebuild-index = true
@@ -22,12 +28,6 @@ db-type = badger
 # 正排索引数据的存放路径
 db-path = "data/"
 
-# 分布式环境中一共有几台index worker
-total-workers = 0
-
-# 本机是第几台index worker(从0开始编号)
-worker-index = 0
-
 # 预估的数据量，用于分配内存
 document-estimate-num = 50000
 
@@ -35,4 +35,4 @@ document-estimate-num = 50000
 csv-file = "data/bilibili_video.csv"
 
 # etcd集群的endpoints
-servers = ["127.0.0.1:2379", "127.0.0.1:2380", "127.0.0.1:2381"]
+etcd-servers = ["127.0.0.1:2379", "127.0.0.1:2380", "127.0.0.1:2381"]
