feat(distributed): 实现分布式文档处理和搜索功能
- 新增 AddDoc、DeleteDoc 和 SearchDoc 的分布式处理逻辑
- 更新配置加载方式，支持环境变量和 ConfigMap
- 修改服务端口为 9000，优化测试用例中的请求地址
- 重构 Sentinel 和 IndexServiceWorker 的初始化流程
- 更新 Docker Compose 配置，支持多个 gRPC 服务

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,62 @@ services:
       - electric-search
     command: etcd --name etcd-server
 
+  grpc1:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      MODE: "2"    
+      INDEX_NAME: "video-index"
+      GROUP_INDEX: "0"  
+      PORT: "12305"     
+    ports:
+      - "12305:12305"     
+    networks:
+      - electric-search
+    depends_on:
+      - etcd
+
+  grpc2:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      MODE: "2"
+      INDEX_NAME: "video-index"
+      GROUP_INDEX: "1"
+      PORT: "12306"
+      - "12306:12306"
+    networks:
+      - electric-search
+    depends_on:
+      - etcd
+
+  grpc3:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      MODE: "2"
+      INDEX_NAME: "video-index"
+      GROUP_INDEX: "1"
+      PORT: "12307"
+    ports:
+      - "12307:12307"
+    networks:
+      - electric-search
+    depends_on:
+      - etcd
+
   web:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      MODE: "3"
+      INDEX_NAME: "video-index"
     ports:
-      - "7887:7887"
+      - "9000:9000"
     networks:
       - electric-search
     depends_on:
